--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "css": "app/themes/flexbones/style.css",
     "scripts": "app/themes/flexbones/assets/js/scripts.js",
     "scriptsmin": "app/themes/flexbones/scripts.min.js",
-    "scriptsfolder": "app/themes/flexbones/assets/js",
+    "scriptsfolder": "app/themes/flexbones",
     "watch": "app/themes/flexbones/",
     "watchproxy": "localhost/flex"
   },
@@ -22,7 +22,7 @@
     "js:uglify": "uglifyjs $npm_package_config_scriptsmin -o $npm_package_config_scriptsmin",
     "js": "npm run -s js:browserify && npm run -s js:uglify",
     "watch:sass": "fsmonitor -d $npm_package_config_sassfolder -q '+*.scss' npm run -s sass",
-    "watch:js": "fsmonitor -d $npm_package_config_scriptsfolder -q '+*.js' npm run -s js",
+    "watch:js": "fsmonitor -d $npm_package_config_scriptsfolder -q '+*.js' !scripts.min.js npm run -s js",
     "browsersync": "browser-sync start --files $npm_package_config_theme'*, !'$npm_package_config_theme'**/*.scss, !.git/*, '$npm_package_config_theme'**/*' --no-open --proxy $npm_package_config_watchproxy",
     "watch": "npm run -s browsersync & npm run -s watch:sass & npm run -s watch:js"
   },
