--- a/package.json
+++ b/package.json
@@ -1,47 +1,22 @@
 {
-  "name": "FlexbonesBuild",
-  "version": "5.0.0",
-  "description": "Watch sass,js and deploy",
-  "author": "Rory Ashford <rory@roikles.com>",
-  "config": {
-    "sass": "app/themes/flexbones/assets/sass/style.scss",
-    "sassfolder": "app/themes/flexbones",
-    "css": "app/themes/flexbones/style.css",
-    "scripts": "app/themes/flexbones/assets/js/scripts.js",
-    "scriptsmin": "app/themes/flexbones/scripts.min.js",
-    "scriptsfolder": "app/themes/flexbones",
-    "watch": "app/themes/flexbones/",
-    "watchproxy": "localhost/flex"
-  },
+  "name": "flexbones-compiler",
+  "version": "0.0.1",
+  "description": "Tidy yo code boy",
+  "main": "watch.js",
   "scripts": {
-    "sass:css": "node-sass $npm_package_config_sass $npm_package_config_css --output-style expanded",
-    "sass:postcss": "postcss --use autoprefixer -o $npm_package_config_css $npm_package_config_css",
-    "sass:cssnano": "cssnano $npm_package_config_css $npm_package_config_css --no-autoprefixer --no-convertValues",
-    "sass": "npm run -s sass:css && npm run -s sass:postcss",
-    "js:browserify": "browserify $npm_package_config_scripts -o $npm_package_config_scriptsmin",
-    "js:uglify": "uglifyjs $npm_package_config_scriptsmin -o $npm_package_config_scriptsmin",
-    "js": "npm run -s js:browserify && npm run -s js:uglify",
-    "watch:sass": "fsmonitor -d $npm_package_config_sassfolder -q '+*.scss' npm run -s sass",
-    "watch:js": "fsmonitor -d $npm_package_config_scriptsfolder -q '+*.js' !scripts.min.js npm run -s js",
-    "browsersync": "browser-sync start --files $npm_package_config_theme'*, !'$npm_package_config_theme'**/*.scss, !.git/*, '$npm_package_config_theme'**/*' --no-open --proxy $npm_package_config_watchproxy",
-    "watch": "npm run -s browsersync & npm run -s watch:sass & npm run -s watch:js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "browserify-shim": "^3.8.12",
-    "cssnano": "^3.4.0",
-    "cssnano-cli": "^1.0.3",
-    "fsmonitor": "^0.2.4",
-    "node-sass": "^3.4.2",
-    "postcss-cli": "^2.3.2",
-    "uglify-js": "^2.6.1"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
-  "browserify-shim": {
-    "jquery": "global:$"
+    "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11"
   }
 }
